app/ui/SuperMarkdown.module.css
.markdownContent {
  width: calc(var(--main-container) - 300px);
}

.markdownContent > pre {
  background: rgba(var(--color-space-darker)) !important;
  border-radius: 5px;
}

.markdownContent > p > code {
  background: rgba(var(--color-space-darker), 0.8) !important;
  border-radius: 5px;
  font-size: 14px;
  color: rgba(var(--color-honey-yellow));
  padding: 0.5rem;
}

.markdownContent > ul li::marker {
  color: #ffdc23;
}

.markdownContent > div {
  display: grid;
  grid-template-columns: 1fr 1fr;
  max-width: var(--main-container);
  width: calc(100vw - 100px);
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  margin: 3rem 0;

  @media (max-width: 768px) {
    grid-template-columns: 1fr;
  }
}

.markdownContent > hr {
  background: black;
  border: none;
  border-bottom: 1px solid #141b2b;
  box-shadow: 0px 2px 0px #28324e;
  margin-bottom: 2rem;
}

.markdownContent > div > figure {
  height: auto;
}

.markdownContent > div > figure > img {
  height: auto;
}

div.code {
  background: rgba(var(--color-space-darker)) !important;
  font-size: 0.9rem !important;
  border-radius: var(--border-radius);
  border: 1px solid rgb(18 19 23);
}

.markdownContent a {
  background: linear-gradient(
    to right,
    rgba(var(--color-honey-yellow)) 0%,
    rgba(var(--color-red-rum)) 50%,
    rgba(var(--color-kokiri-green)) 75%,
    rgba(var(--color-calm-blue)) 100%
  );
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  font-weight: 400;
}

.markdownContent > h2 {
  font-weight: 400;
  font-family: var(--fraiche-font);
  color: rgba(var(--color-honey-yellow));
}

.markdownContent > h3 {
  font-weight: 400;
  font-family: var(--fraiche-font);
  color: rgba(var(--color-honey-yellow));
}

.markdownContent > h2 > a {
  background: none;
  -webkit-background-clip: unset;
  background-clip: unset;
  -webkit-text-fill-color: initial;
  font-weight: 400;
  text-decoration: none;
  color: rgba(var(--color-honey-yellow));
}

.markdownContent > h2 > a:hover::after {
  content: "";
  margin-left: 10px;
  background-image: url('data:image/svg+xml,<svg fill="white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px" viewBox="0 0 806.801 806.801" xml:space="preserve"><g><g><path d="M68.8,740.5c42.7,42.7,99.5,66.2,159.9,66.2c60.4,0,117.2-23.5,159.9-66.2l133-133c8.1-8.1,8.1-21.3,0-29.5L438.4,494.801L365,568.2l23.101,23.101L313.7,665.7c-47,47-123.2,47-170.2,0l-2.5-2.5c-47-47-47-123.2,0-170.2l74.4-74.399l23.1,23.1l73.4-73.399l-83.2-83.2c-8.1-8.1-21.3-8.1-29.5,0l-133,133C23.5,460.801,0,517.601,0,578c0,60.4,23.5,117.2,66.2,159.9L68.8,740.5z"/><path d="M738,66.3c-42.699-42.7-99.5-66.2-159.9-66.2s-117.199,23.5-159.9,66.2l-135.7,135.8c-8.1,8.1-8.1,21.3,0,29.5l83.2,83.2l76.201-76.2l-23.201-23.2l74.4-74.4c47-47,123.201-47,170.201,0l2.5,2.5c47,47,47,123.2,0,170.2l-74.4,74.4L568.301,365L492.1,441.2l83.201,83.2c8.1,8.1,21.299,8.1,29.5,0l135.799-135.8c42.701-42.7,66.201-99.5,66.201-159.9c0-60.4-23.5-117.2-66.201-159.9L738,66.3z"/><path d="M562.5,244.3c-9.801-9.8-22.5-14.6-35.301-14.6c-12.799,0-25.6,4.9-35.299,14.6l-22.201,22.1l-76.2,76.2l-53.699,53.7L266.4,469.7l-22.1,22.101c-19.5,19.5-19.5,51.199,0,70.699c9.8,9.801,22.5,14.601,35.3,14.601s25.6-4.9,35.3-14.601l22.1-22.1L410.4,467l53.699-53.699l76.201-76.2L562.4,315C582,295.5,582,263.8,562.5,244.3z"/></g></g></svg>');
  background-size: 20px;
  background-position: 0 0;
  color: white;
  width: 20px;
  display: inline-block;
  height: 20px;
  margin-top: 13px;
  position: absolute;
  opacity: 0.8;
}

.markdownContent > figure {
  padding: 0;
  margin: 3rem 0;
}

.markdownContent > div > figure {
  padding: 0;
  margin: 0;
}

.markdownContent > figure > img,
.markdownContent div figure > img {
  height: auto;
  margin-bottom: 1rem;
  border-radius: var(--border-radius);
  box-shadow: var(--box-shadow-default);
}

.markdownContent > figure > figcaption,
.markdownContent > div > figure > figcaption {
  font-size: 12px;
  text-align: center;
  color: rgba(var(--color-snow-white), 0.5);
}

.markdownContent a:hover {
  animation: rainbow 10s infinite;
  animation-timing-function: linear;
}

.markdownContent blockquote {
  padding: 1rem 3rem;
  margin: 0;
  border-width: 2px;
  border-style: solid;
  border-radius: 10px;
  border-color: rgba(var(--color-honey-yellow)) rgba(var(--color-red-rum))
    rgba(var(--color-kokiri-green)) rgba(var(--color-calm-blue));
  background: rgba(var(--color-space-darker));
}

@keyframes rainbow {
  0% {
    background-position-x: 0px;
  }

  100% {
    background-position-x: 1000px;
  }
}

@media (max-width: 768px) {
  .markdownContent {
    width: auto;
  }

  .markdownContent blockquote {
    padding: 1rem;
  }
}

